Gap fix attempt #3

--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -727,7 +727,9 @@ img,
   background-color: #b3d6ff;
   position: relative !important;
   z-index: 1 !important; /* Lower than hero-wrapper */
-  /* margin-top: -1px; */
+  margin-top: -1px !important;
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
 }
 .cms-notice {
   padding-bottom: 20px;
@@ -1032,7 +1034,7 @@ label[for="customBloodType"] {
   padding-left: 160px;
 }
 .dashboard-img + .wave-light-bg {
-  margin-top: -2px;
+  margin-top: -6px !important;
 }
 
 /* ----- Button Touch Device Optimizations ----- */
